--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "console.table": "^0.10.0",
     "dotenv": "^10.0.0",
     "inquirer": "^8.1.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.0"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node employeeTracker.js"
   },
   "repository": {
     "type": "git",
